...
    public func collectionView(_ collectionView: UICollectionView, numberOfItemsInSection section: Int) -> Int {
        return 5
    }

    public func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
        
        let placeHolders = ["First Name", "Last Name", "Username", "Email"]
        
        if (indexPath.row == 4) {
            let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "TextCell", for: indexPath) as! SimpleTextCell
            cell.textLabel.text = "Confirm"
            cell.textLabel.textColor = .main_background
            cell.textLabel.textAlignment = .center
...
